initial parser impl

--- a/todo.txt
+++ b/todo.txt
@@ -3,3 +3,6 @@
 make a source: Vec<char> so that it wont be O(n) because of unicode-8 encoding
 (This is kinda on Rust part. Because Rust's &str are not array of char.
 Instead they are array of bytes, u8). So instant lookup time would be much better in the future.
+
+// Comeback later
+in parser::Parser::primary(), add a proper error handling for else case
