parser can now parse binary operations correctly with better error handlings

--- a/todo.txt
+++ b/todo.txt
@@ -6,3 +6,6 @@ Instead they are array of bytes, u8). So instant lookup time would be much bette
 
 // Comeback later
 in parser::Parser::primary(), add a proper error handling for else case
+
+// Error Synchronization improvement
+instead of exiting the process, make a better error handling
